parser.output
Terminals unused in grammar

   CHAR_ERR
   KEY
   CHARCONST_ESC
   unary_MUL
   unary_MIN


State 1 conflicts: 2 shift/reduce
State 12 conflicts: 1 shift/reduce, 2 reduce/reduce
State 20 conflicts: 2 shift/reduce, 2 reduce/reduce
State 30 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 67 conflicts: 2 reduce/reduce
State 72 conflicts: 1 shift/reduce, 2 reduce/reduce
State 78 conflicts: 1 shift/reduce
State 98 conflicts: 14 shift/reduce
State 102 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 143 conflicts: 3 shift/reduce
State 145 conflicts: 1 shift/reduce, 2 reduce/reduce
State 146 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 168 conflicts: 15 shift/reduce
State 173 conflicts: 3 shift/reduce
State 174 conflicts: 1 shift/reduce, 2 reduce/reduce
State 177 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 188 conflicts: 3 reduce/reduce
State 192 conflicts: 1 shift/reduce
State 193 conflicts: 3 shift/reduce
State 205 conflicts: 1 shift/reduce
State 207 conflicts: 1 shift/reduce
State 209 conflicts: 1 shift/reduce
State 211 conflicts: 1 shift/reduce
State 213 conflicts: 1 shift/reduce
State 215 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 221 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce
State 234 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce
State 254 conflicts: 2 shift/reduce, 2 reduce/reduce
State 258 conflicts: 4 shift/reduce
State 284 conflicts: 3 shift/reduce
State 286 conflicts: 3 shift/reduce
State 295 conflicts: 3 shift/reduce
State 313 conflicts: 3 shift/reduce, 24 reduce/reduce
State 343 conflicts: 3 shift/reduce
State 369 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funDeclaration
    6            | error

    7 varDeclaration: typeSpecifier varDeclList SEMI
    8               | error varDeclList SEMI
    9               | typeSpecifier error SEMI

   10 scopedVarDeclaration: scopedTypeSpecifier varDeclList SEMI
   11                     | scopedTypeSpecifier error SEMI
   12                     | error varDeclList SEMI

   13 varDeclList: varDeclList COM varDeclInitialize
   14            | varDeclInitialize
   15            | varDeclList COM error
   16            | error COM varDeclInitialize
   17            | error

   18 varDeclInitialize: varDeclId
   19                  | varDeclId COL simpleExpression
   20                  | error COL simpleExpression
   21                  | varDeclId COL error
   22                  | error

   23 varDeclId: ID
   24          | ID LIndex NUMCONST RIndex
   25          | ID LIndex error
   26          | error RIndex

   27 scopedTypeSpecifier: STATIC typeSpecifier
   28                    | typeSpecifier
   29                    | typeSpecifier error

   30 typeSpecifier: INT
   31              | BOOL
   32              | CHAR

   33 funDeclaration: typeSpecifier ID LP params RP statement
   34               | ID LP params RP statement
   35               | typeSpecifier ID LP error
   36               | typeSpecifier ID LP params RP error
   37               | ID LP error
   38               | ID LP params RP error
   39               | typeSpecifier error

   40 params: paramList
   41       | %empty

   42 paramList: paramList SEMI paramTypeList
   43          | paramTypeList
   44          | paramList SEMI error
   45          | error SEMI paramTypeList
   46          | error

   47 paramTypeList: typeSpecifier paramIdList
   48              | typeSpecifier error

   49 paramIdList: paramIdList COM paramId
   50            | paramId
   51            | paramIdList COM error
   52            | error COM paramId

   53 paramId: ID
   54        | ID LIndex RIndex
   55        | error RIndex
   56        | error

   57 statement: expressionStmt
   58          | compoundStmt
   59          | matchedIf
   60          | unmatchedIf
   61          | iterationStmt
   62          | returnStmt
   63          | breakStmt

   64 expressionStmt: expression SEMI
   65               | SEMI
   66               | error SEMI

   67 compoundStmt: LB localDeclarations statementList RB
   68             | LB error statementList RB
   69             | LB localDeclarations error RB

   70 localDeclarations: localDeclarations scopedVarDeclaration
   71                  | %empty

   72 statementList: statementList statement
   73              | %empty

   74 partialStmt: expressionStmt
   75            | compoundStmt
   76            | returnStmt
   77            | breakStmt

   78 matched: matchedIf
   79        | matchedWhile
   80        | partialStmt
   81        | error

   82 unmatched: unmatchedIf
   83          | unmatchedWhile

   84 matchedIf: IF simpleExpression THEN matched matchedElse
   85          | IF error
   86          | IF error THEN matched matchedElse

   87 matchedElse: ELSIF simpleExpression THEN matched matchedElse
   88            | ELSE matched
   89            | ELSIF error

   90 unmatchedIf: IF simpleExpression THEN matched
   91            | IF simpleExpression THEN unmatched
   92            | IF simpleExpression THEN matched unmatchedElse
   93            | IF error THEN matched
   94            | IF error THEN matched unmatchedElse

   95 unmatchedElse: ELSIF simpleExpression THEN matched
   96              | ELSIF simpleExpression THEN matched unmatchedElse
   97              | ELSIF simpleExpression THEN unmatched
   98              | ELSE unmatched
   99              | ELSIF error

  100 iterationRange: EQ simpleExpression RANGE simpleExpression
  101               | EQ simpleExpression RANGE simpleExpression COL simpleExpression
  102               | EQ simpleExpression RANGE error
  103               | EQ simpleExpression RANGE simpleExpression COL error

  104 matchedWhile: WHILE simpleExpression DO matched
  105             | LOOP FOREVER matched
  106             | LOOP ID iterationRange DO matched
  107             | WHILE error DO matched
  108             | WHILE error
  109             | LOOP ID error DO matched
  110             | LOOP ID error
  111             | LOOP error

  112 unmatchedWhile: WHILE simpleExpression DO unmatched
  113               | LOOP FOREVER unmatched
  114               | LOOP ID iterationRange DO unmatched
  115               | WHILE error DO unmatched
  116               | LOOP ID iterationRange error DO unmatched

  117 iterationStmt: WHILE simpleExpression DO statement
  118              | LOOP FOREVER statement
  119              | LOOP ID iterationRange DO statement
  120              | WHILE error DO statement
  121              | LOOP ID error DO statement

  122 returnStmt: RETURN SEMI
  123           | RETURN expression SEMI

  124 breakStmt: BREAK SEMI

  125 expression: mutable EQ expression
  126           | mutable ADDASS expression
  127           | mutable SUBASS expression
  128           | mutable MULASS expression
  129           | mutable DIVASS expression
  130           | mutable INC
  131           | mutable DEC
  132           | simpleExpression
  133           | error INC
  134           | error DEC
  135           | error ADDASS error
  136           | error SUBASS error
  137           | error MULASS error
  138           | error DIVASS error
  139           | error EQ error
  140           | error ADDASS expression
  141           | error SUBASS expression
  142           | error MULASS expression
  143           | error DIVASS expression
  144           | error EQ expression
  145           | mutable ADDASS error
  146           | mutable SUBASS error
  147           | mutable MULASS error
  148           | mutable DIVASS error
  149           | mutable EQ error

  150 simpleExpression: simpleExpression OR andExpression
  151                 | andExpression
  152                 | simpleExpression OR error
  153                 | error OR andExpression
  154                 | error OR error

  155 andExpression: andExpression AND unaryRelExpression
  156              | unaryRelExpression
  157              | simpleExpression AND error
  158              | error AND unaryRelExpression
  159              | error AND error

  160 unaryRelExpression: NOT unaryRelExpression
  161                   | relExpression
  162                   | NOT error

  163 relExpression: sumExpression relop sumExpression
  164              | sumExpression
  165              | sumExpression relop error
  166              | error relop sumExpression
  167              | error relop error

  168 relop: EQEQ
  169      | LESS
  170      | GRET
  171      | GRETEQ
  172      | LESSEQ
  173      | NOTEQ

  174 sumExpression: sumExpression sumop mulExpression
  175              | mulExpression
  176              | sumExpression sumop error
  177              | error sumop mulExpression
  178              | error sumop error

  179 sumop: PLUS
  180      | MINUS

  181 mulExpression: mulExpression mulop unaryExpression
  182              | unaryExpression
  183              | mulExpression mulop error
  184              | error mulop unaryExpression
  185              | error mulop error

  186 mulop: MULTIPLY
  187      | DIV
  188      | PERCENT

  189 unaryExpression: unaryop unaryExpression
  190                | factor
  191                | unaryop error

  192 unaryop: MINUS
  193        | MULTIPLY
  194        | QMARK

  195 factor: immutable
  196       | mutable

  197 mutable: ID
  198        | mutable LIndex expression RIndex
  199        | ID LB error
  200        | error RB

  201 immutable: LP expression RP
  202          | call
  203          | constant
  204          | LP error

  205 call: ID LP args RP
  206     | error RP
  207     | ID LP error

  208 args: argList
  209     | %empty

  210 argList: argList COM expression
  211        | expression
  212        | argList COM error
  213        | error COM expression

  214 constant: NUMCONST
  215         | CHARCONST
  216         | STRINGCONST
  217         | FALSE
  218         | TRUE


Terminals, with rules where they appear

$end (0) 0
error (256) 6 8 9 11 12 15 16 17 20 21 22 25 26 29 35 36 37 38 39 44
    45 46 48 51 52 55 56 66 68 69 81 85 86 89 93 94 99 102 103 107
    108 109 110 111 115 116 120 121 133 134 135 136 137 138 139 140
    141 142 143 144 145 146 147 148 149 152 153 154 157 158 159 162
    165 166 167 176 177 178 183 184 185 191 199 200 204 206 207 212
    213
CHAR_ERR (258)
KEY (259)
NUMCONST (260) 24 214
CHARCONST (261) 215
CHARCONST_ESC (262)
RANGE (263) 100 101 102 103
STRINGCONST (264) 216
QMARK (265) 194
MULTIPLY (266) 186 193
MINUS (267) 180 192
PERCENT (268) 188
DIV (269) 187
PLUS (270) 179
LESS (271) 169
GRET (272) 170
EQ (273) 100 101 102 103 125 139 144 149
SEMI (274) 7 8 9 10 11 12 42 44 45 64 65 66 122 123 124
LIndex (275) 24 25 54 198
RIndex (276) 24 26 54 55 198
LB (277) 67 68 69 199
RB (278) 67 68 69 200
LP (279) 33 34 35 36 37 38 201 204 205 207
RP (280) 33 34 36 38 201 205 206
COM (281) 13 15 16 49 51 52 210 212 213
COL (282) 19 20 21 101 103
EQEQ (283) 168
IF (284) 84 85 86 90 91 92 93 94
ELSE (285) 88 98
ELSIF (286) 87 89 95 96 97 99
THEN (287) 84 86 87 90 91 92 93 94 95 96 97
WHILE (288) 104 107 108 112 115 117 120
DO (289) 104 106 107 109 112 114 115 116 117 119 120 121
LOOP (290) 105 106 109 110 111 113 114 116 118 119 121
FOREVER (291) 105 113 118
BREAK (292) 124
AND (293) 155 157 158 159
OR (294) 150 152 153 154
NOT (295) 160 162
RETURN (296) 122 123
TRUE (297) 218
FALSE (298) 217
ADDASS (299) 126 135 140 145
SUBASS (300) 127 136 141 146
MULASS (301) 128 137 142 147
DIVASS (302) 129 138 143 148
DEC (303) 131 134
INC (304) 130 133
NOTEQ (305) 173
LESSEQ (306) 172
GRETEQ (307) 171
ID (308) 23 24 25 33 34 35 36 37 38 53 54 106 109 110 114 116 119 121
    197 199 205 207
INT (309) 30
BOOL (310) 31
CHAR (311) 32
STATIC (312) 27
unary_MUL (313)
unary_MIN (314)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
declarationList (62)
    on left: 2 3, on right: 1 2
declaration (63)
    on left: 4 5 6, on right: 2 3
varDeclaration (64)
    on left: 7 8 9, on right: 4
scopedVarDeclaration (65)
    on left: 10 11 12, on right: 70
varDeclList (66)
    on left: 13 14 15 16 17, on right: 7 8 10 12 13 15
varDeclInitialize (67)
    on left: 18 19 20 21 22, on right: 13 14 16
varDeclId (68)
    on left: 23 24 25 26, on right: 18 19 21
scopedTypeSpecifier (69)
    on left: 27 28 29, on right: 10 11
typeSpecifier (70)
    on left: 30 31 32, on right: 7 9 27 28 29 33 35 36 39 47 48
funDeclaration (71)
    on left: 33 34 35 36 37 38 39, on right: 5
params (72)
    on left: 40 41, on right: 33 34 36 38
paramList (73)
    on left: 42 43 44 45 46, on right: 40 42 44
paramTypeList (74)
    on left: 47 48, on right: 42 43 45
paramIdList (75)
    on left: 49 50 51 52, on right: 47 49 51
paramId (76)
    on left: 53 54 55 56, on right: 49 50 52
statement (77)
    on left: 57 58 59 60 61 62 63, on right: 33 34 72 117 118 119 120
    121
expressionStmt (78)
    on left: 64 65 66, on right: 57 74
compoundStmt (79)
    on left: 67 68 69, on right: 58 75
localDeclarations (80)
    on left: 70 71, on right: 67 69 70
statementList (81)
    on left: 72 73, on right: 67 68 72
partialStmt (82)
    on left: 74 75 76 77, on right: 80
matched (83)
    on left: 78 79 80 81, on right: 84 86 87 88 90 92 93 94 95 96 104
    105 106 107 109
unmatched (84)
    on left: 82 83, on right: 91 97 98 112 113 114 115 116
matchedIf (85)
    on left: 84 85 86, on right: 59 78
matchedElse (86)
    on left: 87 88 89, on right: 84 86 87
unmatchedIf (87)
    on left: 90 91 92 93 94, on right: 60 82
unmatchedElse (88)
    on left: 95 96 97 98 99, on right: 92 94 96
iterationRange (89)
    on left: 100 101 102 103, on right: 106 114 116 119
matchedWhile (90)
    on left: 104 105 106 107 108 109 110 111, on right: 79
unmatchedWhile (91)
    on left: 112 113 114 115 116, on right: 83
iterationStmt (92)
    on left: 117 118 119 120 121, on right: 61
returnStmt (93)
    on left: 122 123, on right: 62 76
breakStmt (94)
    on left: 124, on right: 63 77
expression (95)
    on left: 125 126 127 128 129 130 131 132 133 134 135 136 137 138
    139 140 141 142 143 144 145 146 147 148 149, on right: 64 123 125
    126 127 128 129 140 141 142 143 144 198 201 210 211 213
simpleExpression (96)
    on left: 150 151 152 153 154, on right: 19 20 84 87 90 91 92 95
    96 97 100 101 102 103 104 112 117 132 150 152 157
andExpression (97)
    on left: 155 156 157 158 159, on right: 150 151 153 155
unaryRelExpression (98)
    on left: 160 161 162, on right: 155 156 158 160
relExpression (99)
    on left: 163 164 165 166 167, on right: 161
relop (100)
    on left: 168 169 170 171 172 173, on right: 163 165 166 167
sumExpression (101)
    on left: 174 175 176 177 178, on right: 163 164 165 166 174 176
sumop (102)
    on left: 179 180, on right: 174 176 177 178
mulExpression (103)
    on left: 181 182 183 184 185, on right: 174 175 177 181 183
mulop (104)
    on left: 186 187 188, on right: 181 183 184 185
unaryExpression (105)
    on left: 189 190 191, on right: 181 182 184 189
unaryop (106)
    on left: 192 193 194, on right: 189 191
factor (107)
    on left: 195 196, on right: 190
mutable (108)
    on left: 197 198 199 200, on right: 125 126 127 128 129 130 131
    145 146 147 148 149 196 198
immutable (109)
    on left: 201 202 203 204, on right: 195
call (110)
    on left: 205 206 207, on right: 202
args (111)
    on left: 208 209, on right: 205
argList (112)
    on left: 210 211 212 213, on right: 208 210 212
constant (113)
    on left: 214 215 216 217 218, on right: 203


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    program          go to state 6
    declarationList  go to state 7
    declaration      go to state 8
    varDeclaration   go to state 9
    typeSpecifier    go to state 10
    funDeclaration   go to state 11


State 1

    6 declaration: error .
    8 varDeclaration: error . varDeclList SEMI

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (declaration)
    error  [reduce using rule 6 (declaration)]
    ID     [reduce using rule 6 (declaration)]
    INT    reduce using rule 6 (declaration)
    BOOL   reduce using rule 6 (declaration)
    CHAR   reduce using rule 6 (declaration)

    varDeclList        go to state 14
    varDeclInitialize  go to state 15
    varDeclId          go to state 16


State 2

   34 funDeclaration: ID . LP params RP statement
   37               | ID . LP error
   38               | ID . LP params RP error

    LP  shift, and go to state 17


State 3

   30 typeSpecifier: INT .

    $default  reduce using rule 30 (typeSpecifier)


State 4

   31 typeSpecifier: BOOL .

    $default  reduce using rule 31 (typeSpecifier)


State 5

   32 typeSpecifier: CHAR .

    $default  reduce using rule 32 (typeSpecifier)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 18


State 7

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    declaration     go to state 19
    varDeclaration  go to state 9
    typeSpecifier   go to state 10
    funDeclaration  go to state 11


State 8

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


State 9

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 10

    7 varDeclaration: typeSpecifier . varDeclList SEMI
    9               | typeSpecifier . error SEMI
   33 funDeclaration: typeSpecifier . ID LP params RP statement
   35               | typeSpecifier . ID LP error
   36               | typeSpecifier . ID LP params RP error
   39               | typeSpecifier . error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList        go to state 22
    varDeclInitialize  go to state 15
    varDeclId          go to state 16


State 11

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


State 12

   16 varDeclList: error . COM varDeclInitialize
   17            | error .
   20 varDeclInitialize: error . COL simpleExpression
   22                  | error .
   26 varDeclId: error . RIndex

    RIndex  shift, and go to state 23
    COM     shift, and go to state 24
    COL     shift, and go to state 25

    SEMI      reduce using rule 17 (varDeclList)
    SEMI      [reduce using rule 22 (varDeclInitialize)]
    COM       [reduce using rule 17 (varDeclList)]
    COM       [reduce using rule 22 (varDeclInitialize)]
    $default  reduce using rule 17 (varDeclList)


State 13

   23 varDeclId: ID .
   24          | ID . LIndex NUMCONST RIndex
   25          | ID . LIndex error

    LIndex  shift, and go to state 26

    $default  reduce using rule 23 (varDeclId)


State 14

    8 varDeclaration: error varDeclList . SEMI
   13 varDeclList: varDeclList . COM varDeclInitialize
   15            | varDeclList . COM error

    SEMI  shift, and go to state 27
    COM   shift, and go to state 28


State 15

   14 varDeclList: varDeclInitialize .

    $default  reduce using rule 14 (varDeclList)


State 16

   18 varDeclInitialize: varDeclId .
   19                  | varDeclId . COL simpleExpression
   21                  | varDeclId . COL error

    COL  shift, and go to state 29

    $default  reduce using rule 18 (varDeclInitialize)


State 17

   34 funDeclaration: ID LP . params RP statement
   37               | ID LP . error
   38               | ID LP . params RP error

    error  shift, and go to state 30
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RP  reduce using rule 41 (params)

    typeSpecifier  go to state 31
    params         go to state 32
    paramList      go to state 33
    paramTypeList  go to state 34


State 18

    0 $accept: program $end .

    $default  accept


State 19

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


State 20

    9 varDeclaration: typeSpecifier error . SEMI
   16 varDeclList: error . COM varDeclInitialize
   17            | error .
   20 varDeclInitialize: error . COL simpleExpression
   22                  | error .
   26 varDeclId: error . RIndex
   39 funDeclaration: typeSpecifier error .

    SEMI    shift, and go to state 35
    RIndex  shift, and go to state 23
    COM     shift, and go to state 24
    COL     shift, and go to state 25

    SEMI      [reduce using rule 17 (varDeclList)]
    SEMI      [reduce using rule 22 (varDeclInitialize)]
    COM       [reduce using rule 17 (varDeclList)]
    COM       [reduce using rule 22 (varDeclInitialize)]
    $default  reduce using rule 39 (funDeclaration)


State 21

   23 varDeclId: ID .
   24          | ID . LIndex NUMCONST RIndex
   25          | ID . LIndex error
   33 funDeclaration: typeSpecifier ID . LP params RP statement
   35               | typeSpecifier ID . LP error
   36               | typeSpecifier ID . LP params RP error

    LIndex  shift, and go to state 26
    LP      shift, and go to state 36

    $default  reduce using rule 23 (varDeclId)


State 22

    7 varDeclaration: typeSpecifier varDeclList . SEMI
   13 varDeclList: varDeclList . COM varDeclInitialize
   15            | varDeclList . COM error

    SEMI  shift, and go to state 37
    COM   shift, and go to state 28


State 23

   26 varDeclId: error RIndex .

    $default  reduce using rule 26 (varDeclId)


State 24

   16 varDeclList: error COM . varDeclInitialize

    error  shift, and go to state 38
    ID     shift, and go to state 13

    varDeclInitialize  go to state 39
    varDeclId          go to state 16


State 25

   20 varDeclInitialize: error COL . simpleExpression

    error        shift, and go to state 40
    NUMCONST     shift, and go to state 41
    CHARCONST    shift, and go to state 42
    STRINGCONST  shift, and go to state 43
    QMARK        shift, and go to state 44
    MULTIPLY     shift, and go to state 45
    MINUS        shift, and go to state 46
    LP           shift, and go to state 47
    NOT          shift, and go to state 48
    TRUE         shift, and go to state 49
    FALSE        shift, and go to state 50
    ID           shift, and go to state 51

    simpleExpression    go to state 52
    andExpression       go to state 53
    unaryRelExpression  go to state 54
    relExpression       go to state 55
    sumExpression       go to state 56
    mulExpression       go to state 57
    unaryExpression     go to state 58
    unaryop             go to state 59
    factor              go to state 60
    mutable             go to state 61
    immutable           go to state 62
    call                go to state 63
    constant            go to state 64


State 26

   24 varDeclId: ID LIndex . NUMCONST RIndex
   25          | ID LIndex . error

    error     shift, and go to state 65
    NUMCONST  shift, and go to state 66


State 27

    8 varDeclaration: error varDeclList SEMI .

    $default  reduce using rule 8 (varDeclaration)


State 28

   13 varDeclList: varDeclList COM . varDeclInitialize
   15            | varDeclList COM . error

    error  shift, and go to state 67
    ID     shift, and go to state 13

    varDeclInitialize  go to state 68
    varDeclId          go to state 16


State 29

   19 varDeclInitialize: varDeclId COL . simpleExpression
   21                  | varDeclId COL . error

    error        shift, and go to state 69
    NUMCONST     shift, and go to state 41
    CHARCONST    shift, and go to state 42
    STRINGCONST  shift, and go to state 43
    QMARK        shift, and go to state 44
    MULTIPLY     shift, and go to state 45
    MINUS        shift, and go to state 46
    LP           shift, and go to state 47
    NOT          shift, and go to state 48
    TRUE         shift, and go to state 49
    FALSE        shift, and go to state 50
    ID           shift, and go to state 51

    simpleExpression    go to state 70
    andExpression       go to state 53
    unaryRelExpression  go to state 54
    relExpression       go to state 55
    sumExpression       go to state 56
    mulExpression       go to state 57
    unaryExpression     go to state 58
    unaryop             go to state 59
    factor              go to state 60
    mutable             go to state 61
    immutable           go to state 62
    call                go to state 63
    constant            go to state 64


State 30

   37 funDeclaration: ID LP error .
   45 paramList: error . SEMI paramTypeList
   46          | error .

    SEMI  shift, and go to state 71

    SEMI      [reduce using rule 46 (paramList)]
    RP        reduce using rule 46 (paramList)
    $default  reduce using rule 37 (funDeclaration)


State 31

   47 paramTypeList: typeSpecifier . paramIdList
   48              | typeSpecifier . error

    error  shift, and go to state 72
    ID     shift, and go to state 73

    paramIdList  go to state 74
    paramId      go to state 75


State 32

   34 funDeclaration: ID LP params . RP statement
   38               | ID LP params . RP error

    RP  shift, and go to state 76


State 33

   40 params: paramList .
   42 paramList: paramList . SEMI paramTypeList
   44          | paramList . SEMI error

    SEMI  shift, and go to state 77

    $default  reduce using rule 40 (params)


State 34

   43 paramList: paramTypeList .

    $default  reduce using rule 43 (paramList)


State 35

    9 varDeclaration: typeSpecifier error SEMI .

    $default  reduce using rule 9 (varDeclaration)


State 36

   33 funDeclaration: typeSpecifier ID LP . params RP statement
   35               | typeSpecifier ID LP . error
   36               | typeSpecifier ID LP . params RP error

    error  shift, and go to state 78
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RP  reduce using rule 41 (params)

    typeSpecifier  go to state 31
    params         go to state 79
    paramList      go to state 33
    paramTypeList  go to state 34


State 37

    7 varDeclaration: typeSpecifier varDeclList SEMI .

    $default  reduce using rule 7 (varDeclaration)


State 38

   20 varDeclInitialize: error . COL simpleExpression
   22                  | error .
   26 varDeclId: error . RIndex

    RIndex  shift, and go to state 23
    COL     shift, and go to state 25

    $default  reduce using rule 22 (varDeclInitialize)


State 39

   16 varDeclList: error COM varDeclInitialize .

    $default  reduce using rule 16 (varDeclList)


State 40

  153 simpleExpression: error . OR andExpression
  154                 | error . OR error
  158 andExpression: error . AND unaryRelExpression
  159              | error . AND error
  166 relExpression: error . relop sumExpression
  167              | error . relop error
  177 sumExpression: error . sumop mulExpression
  178              | error . sumop error
  184 mulExpression: error . mulop unaryExpression
  185              | error . mulop error
  200 mutable: error . RB
  206 call: error . RP

    MULTIPLY  shift, and go to state 80
    MINUS     shift, and go to state 81
    PERCENT   shift, and go to state 82
    DIV       shift, and go to state 83
    PLUS      shift, and go to state 84
    LESS      shift, and go to state 85
    GRET      shift, and go to state 86
    RB        shift, and go to state 87
    RP        shift, and go to state 88
    EQEQ      shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    NOTEQ     shift, and go to state 92
    LESSEQ    shift, and go to state 93
    GRETEQ    shift, and go to state 94

    relop  go to state 95
    sumop  go to state 96
    mulop  go to state 97


State 41

  214 constant: NUMCONST .

    $default  reduce using rule 214 (constant)


State 42

  215 constant: CHARCONST .

    $default  reduce using rule 215 (constant)


State 43

  216 constant: STRINGCONST .

    $default  reduce using rule 216 (constant)


State 44

  194 unaryop: QMARK .

    $default  reduce using rule 194 (unaryop)


State 45

  193 unaryop: MULTIPLY .

    $default  reduce using rule 193 (unaryop)


State 46

  192 unaryop: MINUS .

    $default  reduce using rule 192 (unaryop)


State 47

  201 immutable: LP . expression RP
  204          | LP . error

    error        shift, and go to state 98
    NUMCONST     shift, and go to state 41
    CHARCONST    shift, and go to state 42
    STRINGCONST  shift, and go to state 43
    QMARK        shift, and go to state 44
    MULTIPLY     shift, and go to state 45
    MINUS        shift, and go to state 46
    LP           shift, and go to state 47
    NOT          shift, and go to state 48
    TRUE         shift, and go to state 49
    FALSE        shift, and go to state 50
    ID           shift, and go to state 51

    expression          go to state 99
    simpleExpression    go to state 100
    andExpression       go to state 53
    unaryRelExpression  go to state 54
    relExpression       go to state 55
    sumExpression       go to state 56
    mulExpression       go to state 57
    unaryExpression     go to state 58
    unaryop             go to state 59
    factor              go to state 60
    mutable             go to state 101
    immutable           go to state 62
    call                go to state 63
    constant            go to state 64


State 48

  160 unaryRelExpression: NOT . unaryRelExpression
  162                   | NOT . error

    error        shift, and go to state 102
    NUMCONST     shift, and go to state 41
    CHARCONST    shift, and go to state 42
    STRINGCONST  shift, and go to state 43
    QMARK        shift, and go to state 44
    MULTIPLY     shift, and go to state 45
    MINUS        shift, and go to state 46
    LP           shift, and go to state 47
    NOT          shift, and go to state 48
    TRUE         shift, and go to state 49
    FALSE        shift, and go to state 50
    ID           shift, and go to state 51

    unaryRelExpression  go to state 103
    relExpression       go to state 55
    sumExpression       go to state 56
    mulExpression       go to state 57
    unaryExpression     go to state 58
    unaryop             go to state 59
    factor              go to state 60
    mutable             go to state 61
    immutable           go to state 62
    call                go to state 63
    constant            go to state 64


State 49

  218 constant: TRUE .

    $default  reduce using rule 218 (constant)


State 50

  217 constant: FALSE .

    $default  reduce using rule 217 (constant)


State 51

  197 mutable: ID .
  199        | ID . LB error
  205 call: ID . LP args RP
  207     | ID . LP error

    LB  shift, and go to state 104
    LP  shift, and go to state 105

    $default  reduce using rule 197 (mutable)


State 52

   20 varDeclInitialize: error COL simpleExpression .
  150 simpleExpression: simpleExpression . OR andExpression
  152                 | simpleExpression . OR error
  157 andExpression: simpleExpression . AND error

    AND  shift, and go to state 106
    OR   shift, and go to state 107

    $default  reduce using rule 20 (varDeclInitialize)


State 53

  151 simpleExpression: andExpression .
  155 andExpression: andExpression . AND unaryRelExpression

    AND  shift, and go to state 108

    AND       [reduce using rule 151 (simpleExpression)]
    $default  reduce using rule 151 (simpleExpression)


State 54

  156 andExpression: unaryRelExpression .

    $default  reduce using rule 156 (andExpression)


State 55

  161 unaryRelExpression: relExpression .

    $default  reduce using rule 161 (unaryRelExpression)


State 56

  163 relExpression: sumExpression . relop sumExpression
  164              | sumExpression .
  165              | sumExpression . relop error
  174 sumExpression: sumExpression . sumop mulExpression
  176              | sumExpression . sumop error

    MINUS   shift, and go to state 81
    PLUS    shift, and go to state 84
    LESS    shift, and go to state 85
    GRET    shift, and go to state 86
    EQEQ    shift, and go to state 89
    NOTEQ   shift, and go to state 92
    LESSEQ  shift, and go to state 93
    GRETEQ  shift, and go to state 94

    $default  reduce using rule 164 (relExpression)

    relop  go to state 109
    sumop  go to state 110


State 57

  175 sumExpression: mulExpression .
  181 mulExpression: mulExpression . mulop unaryExpression
  183              | mulExpression . mulop error

    MULTIPLY  shift, and go to state 80
    PERCENT   shift, and go to state 82
    DIV       shift, and go to state 83

    $default  reduce using rule 175 (sumExpression)

    mulop  go to state 111


State 58

  182 mulExpression: unaryExpression .

    $default  reduce using rule 182 (mulExpression)


State 59

  189 unaryExpression: unaryop . unaryExpression
  191                | unaryop . error

    error        shift, and go to state 112
    NUMCONST     shift, and go to state 41
    CHARCONST    shift, and go to state 42
    STRINGCONST  shift, and go to state 43
    QMARK        shift, and go to state 44
    MULTIPLY     shift, and go to state 45
    MINUS        shift, and go to state 46
    LP           shift, and go to state 47
    TRUE         shift, and go to state 49
    FALSE        shift, and go to state 50
    ID           shift, and go to state 51

    unaryExpression  go to state 113
    unaryop          go to state 59
    factor           go to state 60
    mutable          go to state 61
    immutable        go to state 62
    call             go to state 63
    constant         go to state 64


State 60

  190 unaryExpression: factor .

    $default  reduce using rule 190 (unaryExpression)


State 61

  196 factor: mutable .
  198 mutable: mutable . LIndex expression RIndex

    LIndex  shift, and go to state 114

    $default  reduce using rule 196 (factor)


State 62

  195 factor: immutable .

    $default  reduce using rule 195 (factor)


State 63

  202 immutable: call .

    $default  reduce using rule 202 (immutable)


State 64

  203 immutable: constant .

    $default  reduce using rule 203 (immutable)


State 65

   25 varDeclId: ID LIndex error .

    $default  reduce using rule 25 (varDeclId)


State 66

   24 varDeclId: ID LIndex NUMCONST . RIndex

    RIndex  shift, and go to state 115


State 67

   15 varDeclList: varDeclList COM error .
   20 varDeclInitialize: error . COL simpleExpression
   22                  | error .
   26 varDeclId: error . RIndex

    RIndex  shift, and go to state 23
    COL     shift, and go to state 25

    SEMI      reduce using rule 15 (varDeclList)
    SEMI      [reduce using rule 22 (varDeclInitialize)]
    COM       reduce using rule 15 (varDeclList)
    COM       [reduce using rule 22 (varDeclInitialize)]
    $default  reduce using rule 15 (varDeclList)


State 68

   13 varDeclList: varDeclList COM varDeclInitialize .

    $default  reduce using rule 13 (varDeclList)


State 69

   21 varDeclInitialize: varDeclId COL error .
  153 simpleExpression: error . OR andExpression
  154                 | error . OR error
  158 andExpression: error . AND unaryRelExpression
  159              | error . AND error
  166 relExpression: error . relop sumExpression
  167              | error . relop error
  177 sumExpression: error . sumop mulExpression
  178              | error . sumop error
  184 mulExpression: error . mulop unaryExpression
  185              | error . mulop error
  200 mutable: error . RB
  206 call: error . RP
